# micro-flakes

./: .gitignore  Job time.xlsx  README.md  _config.yml  console_script.spec  gui_script.spec  pyproject.toml  requirements.txt
.github/workflows/: pep8formatting.yml  python-package.yml
Detector/: CACHE  README.md  README.txt  Script.py  Testing.py  find_objects.py  functions.py  install_libraries.txt  main.py  main_GUI.py  main_gui.py  process_object.py  pyproject.toml  requirements.txt  test.py
Detector/output/: Catalogue_Test.jpg.jpg.xlsx  Index_of_objects.xlsx  Index_of_objects_2.xlsx  Index_of_objects_doble.xlsx  Index_of_objects_one.xlsx
EXE/: README.txt
EXE/Flakes_Detector/_internal/: find_objects.py
EXE/Flakes_detector/: CACHE
EXE/Flakes_detector/_internal/wheel-0.41.3.dist-info/: RECORD
For_developing/: Job time.xlsx
For_developing/Iryna/: Catalogue_calibration.jpg.xlsx  Catalogue_calibration2.jpg.xlsx  Catalogue_of_objects_from_sample_93.jpg.xlsx  Catalogue_of_objects_fromcalibration.jpg.xlsx  Index_of_objects - Sample1.xlsx  Index_of_objects - Sample2.xlsx  Index_of_objects - Sample3.xlsx  Index_of_objects 25.xlsx  Index_of_objects 64.xlsx  Index_of_objects.xlsx
For_developing/Samples/Machine_learning/output/: Catalogue_sample_1.jpg.xlsx
For_developing/Size_calibration/: ratio.txt
GUI/: GUI.py  README.txt  Test.py  find_objects.py  functions.py  main.py
Samples_for_testing/output/: Catalogue_black3.jpg.xlsx  Catalogue_calib.jpg.xlsx
Size_calibration/: HeightOfSamplea.xlsx
docs/: Installation.md  Manual.md  README.md  Test.md  Welcome.md
