[project]
name = "Detector"
version = "0.0.7"
authors = [
  {name = "Jiri Zelenka", email = "zelenka@fzu.cz"},
  {name = "Dominik Kriegner", email = "kriegner@fzu.cz"},
]
description = "This software searchs good flakes from photo or webcam in a microscope."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow >= 9.4.0",
    "openpyxl >= 3.0.9",
    "opencv-python >= 4.6.0",
    "numpy >= 1.25.2",
    "PyQt6",
]

[project.scripts]
flakes-detector = "Detector.main:main"

[project.gui-scripts]
flakes-detector-GUI = "Detector.main_GUI:main"

[build-system]
requires = ["flit_core >= 3.2, <4"]
build-backend = "flit_core.buildapi"

[project.urls]
"Homepage" = "https://github.com/dkriegner/micro-flakes"
"Bug Tracker" = "https://github.com/dkriegner/micro-flakes/issues"
