[project]
name = "The detector of samples"
version = "0.0.1"
authors = [
  { name="Jiri Zelenka", email="jirka-zelenka@centrum.cz" },
  { name="Dominik Kriegner ", email="kriegner@fzu.cz" }
]
description = "This software searchs good sample from photo or webcam in a microscope."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow >=9.4.0",
    "openpyxl>=3.0.9",
    "opencv>=4.6.0",
    "shutils>=3.0.9",
    "numpy>=1.25.2",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.urls]
"Homepage" = "https://github.com/dkriegner/micro-flakes"
"Bug Tracker" = "https://github.com/dkriegner/micro-flakes/issues"
